--- a/Ethereum-prediction/main.ipynb
+++ b/Ethereum-prediction/main.ipynb
@@ -181,23 +181,36 @@
        "</div>"
       ],
       "text/plain": [
-       "            Date         Open  ...    Adj Close        Volume\n",
-       "0     2015-08-08     2.793760  ...     0.753325  6.741880e+05\n",
-       "1     2015-08-09     0.706136  ...     0.701897  5.321700e+05\n",
-       "2     2015-08-10     0.713989  ...     0.708448  4.052830e+05\n",
-       "3     2015-08-11     0.708087  ...     1.067860  1.463100e+06\n",
-       "4     2015-08-12     1.058750  ...     1.217440  2.150620e+06\n",
-       "...          ...          ...  ...          ...           ...\n",
-       "2115  2021-05-23  2298.367188  ...  2109.579834  5.600572e+10\n",
-       "2116  2021-05-24  2099.936035  ...  2643.591064  5.369712e+10\n",
-       "2117  2021-05-25  2649.033203  ...  2706.628906  4.955833e+10\n",
-       "2118  2021-05-26  2707.052734  ...  2888.698730  4.249977e+10\n",
-       "2119  2021-05-27  2872.692383  ...  2776.133057  3.456504e+10\n",
+       "            Date         Open         High          Low        Close  \\\n",
+       "0     2015-08-08     2.793760     2.798810     0.714725     0.753325   \n",
+       "1     2015-08-09     0.706136     0.879810     0.629191     0.701897   \n",
+       "2     2015-08-10     0.713989     0.729854     0.636546     0.708448   \n",
+       "3     2015-08-11     0.708087     1.131410     0.663235     1.067860   \n",
+       "4     2015-08-12     1.058750     1.289940     0.883608     1.217440   \n",
+       "...          ...          ...          ...          ...          ...   \n",
+       "2115  2021-05-23  2298.367188  2384.411621  1737.468750  2109.579834   \n",
+       "2116  2021-05-24  2099.936035  2672.595703  2090.639648  2643.591064   \n",
+       "2117  2021-05-25  2649.033203  2750.534912  2394.355469  2706.628906   \n",
+       "2118  2021-05-26  2707.052734  2911.735596  2652.094482  2888.698730   \n",
+       "2119  2021-05-27  2872.692383  2872.692383  2642.607910  2776.133057   \n",
+       "\n",
+       "        Adj Close        Volume  \n",
+       "0        0.753325  6.741880e+05  \n",
+       "1        0.701897  5.321700e+05  \n",
+       "2        0.708448  4.052830e+05  \n",
+       "3        1.067860  1.463100e+06  \n",
+       "4        1.217440  2.150620e+06  \n",
+       "...           ...           ...  \n",
+       "2115  2109.579834  5.600572e+10  \n",
+       "2116  2643.591064  5.369712e+10  \n",
+       "2117  2706.628906  4.955833e+10  \n",
+       "2118  2888.698730  4.249977e+10  \n",
+       "2119  2776.133057  3.456504e+10  \n",
        "\n",
        "[2120 rows x 7 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +240,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,7 +329,7 @@
        "1  2015-08-09  0.701897"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,8 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Date\"]=df[\"Date\"].apply(str_to_datetime)\n",
-    "# df[\"Date\"] = [str_to_datetime(s) for s in df[\"Date\"]]"
+    "df[\"Date\"]=df[\"Date\"].apply(str_to_datetime)"
    ]
   },
   {
@@ -444,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.index = df.pop('Date')\n"
+    "df.index = df.pop('Date')"
    ]
   },
   {
@@ -516,7 +528,7 @@
        "2015-08-12  1.217440"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,19 +542,11 @@
    "execution_count": 66,
    "id": "d7471a58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\shiva\\AppData\\Local\\Temp\\ipykernel_17664\\697863065.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df['Close'] = df['Close'].fillna(method='ffill')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Close\"].isna().sum()\n",
-    "df['Close'] = df['Close'].fillna(method='ffill')\n"
+    "# df['Close'] = df['Close'].fillna(method='ffill')\n",
+    "df['Close'] = df['Close'].ffill()"
    ]
   },
   {
@@ -573,7 +577,7 @@
    "id": "b1914346",
    "metadata": {},
    "source": [
-    "inistialising linear regression"
+    "Inistialising linear regression"
    ]
   },
   {
@@ -697,7 +701,7 @@
        "[2120 rows x 2 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +715,29 @@
    "execution_count": 68,
    "id": "74ae98b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\shiva\\Downloads\\work\\Ml_models\\virtual\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3804\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3805\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3806\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'Date'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdate_ordinal\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mDate\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.map(pd.Timestamp.toordinal)\n\u001b[32m      2\u001b[39m X = df[[\u001b[33m'\u001b[39m\u001b[33mdate_ordinal\u001b[39m\u001b[33m'\u001b[39m]]\n\u001b[32m      3\u001b[39m y = df[\u001b[33m\"\u001b[39m\u001b[33mClose\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\shiva\\Downloads\\work\\Ml_models\\virtual\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\shiva\\Downloads\\work\\Ml_models\\virtual\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Date'"
+     ]
+    }
+   ],
    "source": [
     "df['date_ordinal'] = df['Date'].map(pd.Timestamp.toordinal)\n",
     "X = df[['date_ordinal']]\n",
