--- a/Ethereum-prediction/main.ipynb
+++ b/Ethereum-prediction/main.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "faa9af8a",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "4  2025-04-17"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 33,
    "id": "00113a6c",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 34,
    "id": "661bd054",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 35,
    "id": "6ec06885",
    "metadata": {},
    "outputs": [],
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 36,
    "id": "52c2b69e",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 37,
    "id": "df31a039",
    "metadata": {},
    "outputs": [],
@@ -831,22 +831,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9a60b2bb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_3_X_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[32m      2\u001b[39m scaler =  StandardScaler()\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m df_3_X_test_Scalar = scaler.fit_transform(\u001b[43mdf_3_X_test\u001b[49m)\n\u001b[32m      5\u001b[39m df_3_X_test_Scalar.head(\u001b[32m2\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_3_X_test' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler =  StandardScaler()\n",
@@ -856,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 39,
    "id": "0e7d3ce2",
    "metadata": {},
    "outputs": [],
@@ -866,35 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
-   "id": "4e797e01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.28906880e+00, 9.14821970e-01, 2.42780700e+00, 1.03183903e+01,\n",
-       "       1.60319880e+01, 1.11079250e+01, 1.08219620e+01, 1.02777888e+01,\n",
-       "       5.21830382e+01, 3.30292090e+02, 3.05472317e+02, 3.05256661e+02,\n",
-       "       1.23910477e+03, 5.42193830e+02, 5.89183994e+02, 2.94000340e+02,\n",
-       "       2.03847942e+02, 1.50162618e+02, 1.40149661e+02, 2.66742111e+02,\n",
-       "       2.30042173e+02, 1.77196307e+02, 1.28441958e+02, 2.08692925e+02,\n",
-       "       2.12555521e+02, 3.22720125e+02, 3.51594035e+02, 6.51133934e+02,\n",
-       "       1.54328579e+03, 4.02414883e+03])"
-      ]
-     },
-     "execution_count": 357,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_3_X_test_Result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 40,
    "id": "4599ef31",
    "metadata": {},
    "outputs": [],
@@ -904,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 42,
    "id": "5c80f637",
    "metadata": {},
    "outputs": [
@@ -912,37 +872,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Date  Predicted Close\n",
-      "0  2025-04-13             1.29\n",
-      "1  2025-04-14             0.91\n",
-      "2  2025-04-15             2.43\n",
-      "3  2025-04-16            10.32\n",
-      "4  2025-04-17            16.03\n",
-      "5  2025-04-18            11.11\n",
-      "6  2025-04-19            10.82\n",
-      "7  2025-04-20            10.28\n",
-      "8  2025-04-21            52.18\n",
-      "9  2025-04-22           330.29\n",
-      "10 2025-04-23           305.47\n",
-      "11 2025-04-24           305.26\n",
-      "12 2025-04-25          1239.10\n",
-      "13 2025-04-26           542.19\n",
-      "14 2025-04-27           589.18\n",
-      "15 2025-04-28           294.00\n",
-      "16 2025-04-29           203.85\n",
-      "17 2025-04-30           150.16\n",
-      "18 2025-05-01           140.15\n",
-      "19 2025-05-02           266.74\n",
-      "20 2025-05-03           230.04\n",
-      "21 2025-05-04           177.20\n",
-      "22 2025-05-05           128.44\n",
-      "23 2025-05-06           208.69\n",
-      "24 2025-05-07           212.56\n",
-      "25 2025-05-08           322.72\n",
-      "26 2025-05-09           351.59\n",
-      "27 2025-05-10           651.13\n",
-      "28 2025-05-11          1543.29\n",
-      "29 2025-05-12          4024.15\n"
+      "        Date  Predicted Close\n",
+      "0 2025-04-13             1.29\n",
+      "1 2025-04-14             0.91\n",
+      "2 2025-04-15             2.43\n",
+      "3 2025-04-16            10.32\n",
+      "4 2025-04-17            16.03\n"
      ]
     }
    ],
@@ -958,12 +893,12 @@
     "\n",
     "# Final result\n",
     "\n",
-    "print(predicted_df)\n"
+    "print(predicted_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 43,
    "id": "3c3d13f1",
    "metadata": {},
    "outputs": [
@@ -993,6 +928,14 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dff3214",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
