Random Forest reg - Prediction

--- a/Ethereum-prediction/RandomForestReg.ipynb
+++ b/Ethereum-prediction/RandomForestReg.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1bfc4469",
+   "metadata": {},
+   "source": [
+    "RANDOM FOREST REGRESSION - PREDCITON MODEL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83a14752",
    "metadata": {},
    "source": [
