--- a/Ethereum-prediction/LSTM-Prediction.ipynb
+++ b/Ethereum-prediction/LSTM-Prediction.ipynb
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "df = df.set_index('Date')\n",
+    "df = df.set_index('Date') # We are setting Date As index for out lstm\n",
     "\n",
     "plt.style.use('dark_background')\n",
     "plt.plot(df.index,df[\"close\"],label=\"Close price \",color=\"blue\")\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "49f702b7",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.head() "
    ]
   },
   {
