--- a/Ethereum-prediction/LSTM-Prediction.ipynb
+++ b/Ethereum-prediction/LSTM-Prediction.ipynb
@@ -810,6 +810,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f39a5e21",
+   "metadata": {},
+   "source": [
+    "Prediction Using Past 7 Years ETH Data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b86a3b77",
