--- a/Ethereum-prediction/LSTM-Prediction.ipynb
+++ b/Ethereum-prediction/LSTM-Prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "a4071103",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8cecb0be",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "4  1.217440 2015-08-13"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1c77a597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1504ca40fb0>"
+       "<matplotlib.legend.Legend at 0x155d97f21b0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "49f702b7",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "2015-08-13  1.217440"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9ae42437",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0f0e0fab",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4b0fb42c",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "120dae97",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "83f30485",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4fbe3177",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "042a8e52",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "51d2b384",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "36c5fb9d",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e4a13a6a",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3c5abf9d",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1028,7 @@
    "source": [
     "plt.figure(figsize=(14, 6))\n",
     "plt.plot(last_7_years.index[-100:], last_7_years['close'].values[-100:], label='Recent Close Prices',color=\"red\")\n",
-    "plt.plot(forecast_df.index, forecast_df['Predicted_Close'], label='30-Day Forecast', linestyle='--',color=\"green\")\n",
+    "plt.plot(forecast_df.index, forecast_df['Predicted_Close'], label='30-Day Forecast',color=\"green\")\n",
     "plt.title('ETH (USD) Forecast: Next 30 Days (Using Last 7 Years of Data)')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Close Price')\n",
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "be6ce891",
    "metadata": {},
    "outputs": [
